# rustapi

./: Cargo.toml  README.md  manifestfmt.toml  rustfmt.toml
macro/: Cargo.toml
macro/src/: fn_once.rs  handle.rs  lib.rs  transparent.rs
macro/tests/: test.rs
src/: lib.rs  utils.rs
src/shared/: dxgiformat.rs  dxgitype.rs  minwindef.rs  mod.rs  ntdef.rs  windef.rs
src/shared/dxgi/: mod.rs
src/shared/dxgi/device_sub_object/: get_device.rs  mod.rs
src/shared/dxgi/object/: get_parent.rs  mod.rs
src/shared/dxgi/swap_chain/: get_buffer.rs  get_desc.rs  mod.rs
src/um/: consoleapi.rs  fileapi.rs  handleapi.rs  ioapiset.rs  libloaderapi.rs  memoryapi.rs  mod.rs  processthreadsapi.rs  profileapi.rs  psapi.rs  securitybaseapi.rs  synchapi.rs  sysinfoapi.rs  timeapi.rs  tlhelp32.rs  winbase.rs  wincon.rs  wincontypes.rs  winnt.rs  winsvc.rs  winuser.rs  wow64apiset.rs
src/um/consoleapi/: alloc_console.rs  close_pseudo_console.rs  create_pseudo_console.rs  get_number_of_console_input_events.rs  mod.rs
src/um/d3d11/: create_device_and_swap_chain.rs  mod.rs  subresource_data.rs
src/um/d3d11/blob/: get_buffer_pointer.rs  get_buffer_size.rs  mod.rs
src/um/d3d11/buffer/: get_desc.rs  mod.rs
src/um/d3d11/depth_stencil_state/: get_desc.rs  mod.rs
src/um/d3d11/depth_stencil_view/: get_desc.rs  mod.rs
src/um/d3d11/device/: create_class_linkage.rs  create_depth_stencil_state.rs  create_pixel_shader.rs  create_rasterizer_state.rs  create_render_target_view.rs  create_sampler_state.rs  create_shader_resource_view.rs  create_texture_2d.rs  get_immediate_context.rs  mod.rs
src/um/d3d11/device_context/: mod.rs
src/um/d3d11/device_context/input_assembler/: ia_get_index_buffer.rs  ia_get_vertex_buffers.rs  mod.rs
src/um/d3d11/device_context/output_merger/: mod.rs  om_get_depth_stencil_state.rs  om_get_render_targets.rs  om_set_depth_stencil_state.rs  om_set_render_targets.rs
src/um/d3d11/device_context/pixel_shader/: mod.rs  ps_set_samplers.rs  ps_set_shader.rs  ps_set_shader_resources.rs
src/um/d3d11/device_context/rasterizer/: mod.rs  rs_set_state.rs
src/um/d3d11/device_context/vertex_shader/: mod.rs  vs_get_constant_buffers.rs
src/um/d3d11/rasterizer_state/: get_desc.rs  mod.rs
src/um/d3d11/render_target_view/: get_desc.rs  mod.rs
src/um/d3d11/sampler_state/: get_desc.rs  mod.rs
src/um/d3d11/shader_resource_view/: get_desc.rs  mod.rs
src/um/d3d11/texture_2d/: get_desc.rs  mod.rs
src/um/d3dcompiler/: d3d_compile.rs  mod.rs
src/um/fileapi/: create_file.rs  get_logical_drive_strings.rs  mod.rs  query_dos_device.rs
src/um/handleapi/: close_handle.rs  duplicate_handle.rs  mod.rs
src/um/ioapiset/: device_io_control.rs  mod.rs
src/um/libloaderapi/: disable_thread_library_calls.rs  get_module_handle.rs  get_proc_address.rs  mod.rs
src/um/memoryapi/: mod.rs  read_process_memory.rs  virtual_alloc.rs  virtual_query.rs  write_process_memory.rs
src/um/processthreadsapi/: create_remote_thread.rs  get_current_process.rs  get_current_thread.rs  get_exit_code_thread.rs  get_process_id.rs  mod.rs  open_process.rs  open_process_token.rs  set_thread_affinity_mask.rs
src/um/profileapi/: mod.rs  query_performance_counter.rs
src/um/psapi/: get_mapped_file_name.rs  mod.rs
src/um/sysinfoapi/: get_native_system_info.rs  get_system_info.rs  get_tick_count.rs  mod.rs
src/um/timeapi/: mod.rs
src/um/tlhelp32/: create_toolhelp32_snapshot.rs  heap32_list_first.rs  heap32_list_next.rs  mod.rs  module32_first.rs  module32_next.rs  process32_first.rs  process32_next.rs  thread32_first.rs  thread32_next.rs
src/um/winbase/: lookup_privilege_value.rs  mod.rs
src/um/winuser/: get_async_key_state.rs  get_foreground_window.rs  get_key_state.rs  get_keyboard_state.rs  key.rs  mod.rs  set_foreground_window.rs
src/um/wow64apiset/: is_wow64_process.rs  mod.rs
src/wrap/: key.rs  mod.rs  module.rs
tests/: test.rs
