[package]
name = "rustapi"
version = "0.2.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2018"
description = "Rusty bindings for all of Windows API"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.33"
bitflags = "1.2.1"
derive_more = "0.99.11"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.11"
# partial-uninit = "0.1.0"
partial-uninit = { path = "D:\\PROJECT\\lang\\rust\\lib\\partial-uninit", version = "0.1.0" }
rustapi-macro = { version = "0.1.0", path = "macro" }
typed-builder = "0.7.0"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["std"] }
wio = "0.2.2"
format = "0.2.3"

[features]
default = ["dxgi", "d3dcompiler", "consoleapi", "d3d11", "fileapi", "handleapi", "ioapiset", "libloaderapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "profileapi", "psapi", "securitybaseapi", "synchapi", "sysinfoapi", "timeapi", "tlhelp32", "winbase", "wincon", "wincontypes", "windef", "winnt", "winsvc", "winuser", "wow64apiset"]
nightly = ["unstable"]
unstable = []
consoleapi = ["winapi/consoleapi", "winapi/minwindef"]
d3d11 = ["winapi/d3d11"]
d3dcompiler = ["winapi/d3dcompiler"]
dxgi = ["dxgitype", "winapi/dxgi"]
dxgitype = ["dxgiformat", "winapi/dxgitype"]
dxgiformat = ["winapi/dxgiformat"]
fileapi = ["winapi/fileapi", "winapi/handleapi", "winapi/minwinbase", "winapi/minwindef", "winapi/winerror", "winapi/winnt"]
handleapi = ["winapi/handleapi"]
ioapiset = ["winapi/ioapiset"]
libloaderapi = ["winapi/libloaderapi"]
memoryapi = ["winapi/memoryapi", "winapi/winnt"]
minwindef = ["winapi/minwindef"]
ntdef = ["winapi/handleapi", "winapi/ntdef"]
processthreadsapi = ["winapi/minwindef", "winapi/processthreadsapi", "winapi/winnt"]
profileapi = ["winapi/profileapi"]
psapi = ["winapi/psapi"]
securitybaseapi = ["winapi/securitybaseapi"]
synchapi = ["winapi/synchapi", "winapi/winbase"]
sysinfoapi = ["winapi/sysinfoapi"]
timeapi = ["winapi/timeapi"]
tlhelp32 = ["winapi/handleapi", "winapi/minwindef", "winapi/tlhelp32"]
winbase = ["winapi/winbase"]
wincon = ["winapi/wincon"]
wincontypes = ["winapi/wincontypes"]
windef = ["winapi/windef"]
winerror = ["winapi/winerror"]
winnt = ["winapi/winnt"]
winsvc = ["winapi/winsvc"]
winuser = ["winapi/winuser"]
wow64apiset = ["winapi/wow64apiset"]